# caf_cookoff

./: .gitignore  README.md
caf_go/: caf.go  caf_test.go  main.go
caf_python/: caf.py
caf_rust/: Cargo.toml
caf_rust/benches/: caf_bench.rs
caf_rust/src/: caf.rs  lib.rs  main.rs  utils.rs
caf_rust/src/caf/: mod.rs  xcor_fftw.rs  xcor_rustfft.rs
caf_rust/tests/: test.rs
grc/: capture.grc  generate.grc
utils/: generate.py  pyproject.toml
