[package]
name = "caf_rust"
version = "0.1.0"
authors = ["Mark Kubiak <mkubiak.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fftw = { version = "0.6", default_features = false, features = ["system"] }
itertools = "0.8"
num-complex = "0.2"
num_cpus = "1.12"
rayon = "1.1"
rustfft = "3.0"
threadpool = "1.7"

[profile.release]
debug = true
